changed styles.css to scss

--- a/project0/css/styles.scss
+++ b/project0/css/styles.scss
@@ -1,5 +1,14 @@
+/*
+1x id
+1x class
+5x selectors
+1x @media
 
-/* Show it is fixed to the top */
+1x scss variable
+1x scss nesting
+1x scss inheritance
+*/
+
 body {
 	min-height: 75rem;
 	padding-top: 4.5rem;
